--- a/styles/style.css
+++ b/styles/style.css
@@ -406,9 +406,12 @@ header {
   cursor: pointer;
   color: #d4d8e3;
 }
-.works-gallery img {
+.works-gallery__image-container {
   height: 100%;
   margin: 0 30px;
+}
+.works-gallery img {
+  height: 100%;
 }
 .works-gallery #prev, .works-gallery #next {
   width: 40px;
@@ -445,8 +448,12 @@ header {
     grid-auto-rows: 290px;
     padding: 0 1.5rem;
   }
-  .works-gallery img {
-    margin-top: 50px;
+  .works-gallery__image-container {
+    padding: 40px 0 0;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .works-gallery #prev {
     position: absolute;
@@ -473,8 +480,6 @@ header {
     width: 100%;
     height: auto;
     max-height: 90vh;
-    margin: 0;
-    margin-top: 50px;
     object-fit: cover;
   }
 }
@@ -487,8 +492,6 @@ header {
     width: 100%;
     height: auto;
     max-height: 90vh;
-    margin: 0;
-    margin-top: 50px;
     object-fit: cover;
   }
 }
